--- a/client/tcpweblog_client.8
+++ b/client/tcpweblog_client.8
@@ -1,5 +1,5 @@
 .\" Manpage for TCPWebLog-Client.
-.TH tcpweblog_client.bin 8 "2012-06-11"
+.TH tcpweblog_client.bin 8 "2012-07-06"
 .SH NAME
 tcpweblog_client.bin \- TCPWebLog-Client
 .SH SYNOPSIS
@@ -31,13 +31,14 @@ Local cache file used to temporarily store data when the TCP connection is not a
 TP
 .BI LOG_TYPE
 The log type:
-1 : Apache Access Log;
-2 : Apache Error Log;
-3 : Apache SSL Access Log;
-4 : Apache SSL Error Log;
-5 : Varnish NCSA Log (you must prefix the log format with: "%h %V");
-6 : FTP log;
-7 : PHP log;
+1 : Apache Access Log (per virtual host);
+2 : Apache Error Log (per virtual host);
+3 : Apache SSL Access Log (per virtual host);
+4 : Apache SSL Error Log (per virtual host);
+5 : Apache Access Log (global config - you must prefix the log format with: \"%h %V\");
+6 : Varnish NCSA Log (you must prefix the log format with: \"%h %V\");
+7 : FTP log;
+8 : PHP log using the tcpweblog php extension.
 TP
 .BI CLUSTER_NUMBER
 The cluster number
