--- a/server/README
+++ b/server/README
@@ -3,9 +3,9 @@ TCPWebLog-Server - README
 
 Name: TCPWebLog-Server
 
-Version: 1.4.0
+Version: 1.5.0
 
-Release date: 2012-07-06
+Release date: 2012-07-11
 
 Author: Nicola Asuni (nicola@fubra.com)
 
@@ -132,5 +132,9 @@ RUN
 
 	To startup the service at boot you can use the chkconfig or update-rc.d
 	command (depending by OS type).
+
+NOTES
+-----
+	You must implement some firewall rules in your server to avoid receiving TCP messages from unauthorized clients.
 
 ================================================================================
