--- a/client/README
+++ b/client/README
@@ -3,9 +3,9 @@ TCPWebLog-Client - README
 
 Name: TCPWebLog-Client
 
-Version: 1.4.0
+Version: 1.5.0
 
-Release date: 2012-07-06
+Release date: 2012-07-11
 
 Author: Nicola Asuni (nicola@fubra.com)
 
@@ -74,38 +74,35 @@ This folder contains the source code of TCPWebLog-Client:
 		If using SELinux, run the following command to allow apache daemon to open network connections:
 			setsebool -P httpd_can_network_connect=1
 
+	The 7 arguments of tcpweblog_client.bin are:
+
+	- remote_ip_address: the IP address of the listening remote log server;
+	- remote_port: the TCP	port of the listening remote log server;
+	- local_cache_file: the local cache file to temporarily store the logs when the TCP connection is not available;
+	- logname: the last part of the log file name (i.e.: access.log);
+	- cluster_number: the cluster number;
+	- client_ip: the client (local) IP address;
+	- client_hostname: the client (local) hostname.
+
 	Examples:
 
-		APACHE
-			CustomLog "| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log 1 1 10.0.2.15 xhost" combined
-			ErrorLog "| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log 2 1 10.0.2.15 xhost"
+	APACHE (configuration per virtual host)
+		CustomLog \"| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log access.log 1 10.0.2.15 xhost\" combined
+		ErrorLog \"| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log error.log 1 10.0.2.15 xhost\"
 
-		APACHE SSL
-			CustomLog "| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log 3 1 10.0.2.15 xhost" combined
-			ErrorLog "| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log 4 1 10.0.2.15 xhost"
+	APACHE SSL (configuration per virtual host)
+		CustomLog \"| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log ssl.access.log 1 10.0.2.15 xhost\" combined
+		ErrorLog \"| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log ssl.error.log 1 10.0.2.15 xhost\"
 
-		VARNISHNCSA
-			You must prefix the log format with "%h %V", for example:
-			varnishncsa -F "%h %V %{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" | /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log 5 1 - -
+	APACHE (general CustomLog)
+		# you must prefix the log format with \"%h %V\", for example:
+		LogFormat \"%h %V %{X-Forwarded-For}i %l %u %t \\\"%r\\\" %>s %b \\\"%{Referer}i\\\" \\\"%{User-Agent}i\\\"\" common
+		CustomLog \"| /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log access.log 1 - -\" common
 
-	The arguments of tcpweblog_client.bin are:
+	VARNISHNCSA
+		You must prefix the log format with \"%h %V\", for example:
+		varnishncsa -F \"%h %V %{X-Forwarded-For}i %l %u %t \\\"%r\\\" %>s %b \\\"%{Referer}i\\\" \\\"%{User-Agent}i\\\"\" | /usr/bin/tcpweblog_client.bin 10.0.3.15 9940 /var/log/tcpweblog_cache.log varnish.log 1 - -
 
-	 - the IP address of the listening remote log server;
-	 - the TCP	port of the listening remote log server;
-	 - the local cache file to temporarily store the logs when the TCP
-	   connection is not available;
-	 - the log type:
-		1 : Apache Access Log (per virtual host);
-		2 : Apache Error Log (per virtual host);
-		3 : Apache SSL Access Log (per virtual host);
-		4 : Apache SSL Error Log (per virtual host);
-		5 : Apache Access Log (global config - you must prefix the log format with: \"%h %V\");
-		6 : Varnish NCSA Log (you must prefix the log format with: \"%h %V\");
-		7 : FTP log;
-		8 : PHP log using the tcpweblog php extension.
-	 - the cluster number;
-	 - the client (local) IP address;
-	 - the client (local) hostname.
 
 
 REQUIRED PACKAGES TO COMPILE THE SOURCES:
