--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,6 @@
+1.8.0 (2012-07-16)
+	- Various memory allocation and segmentation fault problems were fixed.
+
 1.7.0 (2012-07-13)
 	- A memory problem was fixed on client.
 
