--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,6 @@
+1.9.0 (2012-07-17)
+	- Minor improvements.
+
 1.8.0 (2012-07-16)
 	- Various memory allocation and segmentation fault problems were fixed.
 
