--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,5 +1,5 @@
 2.0.0 (2012-08-08)
-	- IPV6_V6ONLY option was set to false to accept IPv4 connections.
+	- Documentation was updated.
 
 1.9.0 (2012-07-17)
 	- Minor improvements.
