--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+3.2.0 (2012-08-29)
+	- Default configuration for Apache was fixed.
+	- Debug mode on server was improved to display milliseconds.
+
 3.1.0 (2012-08-21)
 	- RPM spec files were changed to avoid overriding the configuration and database files.
 	- Init scripts were improved.
