--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,6 @@
+3.2.1 (2012-09-17)
+	- Init scripts were improved.
+
 3.2.0 (2012-08-29)
 	- Default configuration for Apache was fixed.
 	- Debug mode on server was improved to display milliseconds.
